# paper

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  index.js  package-lock.json  package.json  paper.desktop
config/: default.json
src/: CMakeLists.txt  index.js  main.cpp
src/helpers/: ConfigHelper.cpp  ConfigHelper.h  DownloadHelper.cpp  DownloadHelper.h  ShellHelper.cpp  ShellHelper.h
src/interactors/: FetchWallpaperInteractor.cpp  FetchWallpaperInteractor.h  Interactor.cpp  Interactor.h  SetWallpaperInteractor.cpp  SetWallpaperInteractor.h
src/parsers/: ArgumentParser.cpp  ArgumentParser.h
src/randomWallpaper/: index.js
src/settingsManager/: index.js  settings.json
src/utils/: CommonUtils.cpp  CommonUtils.h
src/wallpaperSetter/: index.js
